Updated all pages

--- a/recipes/mcrib-sandwich.html
+++ b/recipes/mcrib-sandwich.html
@@ -8,7 +8,71 @@
 </head>
 
 <body>
+    <h1 id="#title">Chef John's Copycat McRib® Sandwich</h1>
+    <img src="../images/mcrib.jpeg" alt="">
 
+    <p>I tip my cap to a certain fast food franchise for coming up with the idea for a boneless baby back rib sandwich,
+        the only downside being that they use about 60 mystery ingredients-- ribs not necessarily being one of them.
+        That's why you should try this easy homemade version with real ribs; simply bake, chill, cut, sauce, finish on
+        the grill, and voila! One of the best sandwiches I've ever had.</p>
+
+    <h2>Ingredients</h2>
+
+    <h3>For the Dry Rub</h3>
+    <ul>
+        <li>⅓ cup kosher salt</li>
+        <li>¼ cup brown sugar</li>
+        <li>2 tablespoons chili powder</li>
+        <li>2 tablespoons freshly ground black pepper</li>
+        <li>1 tablespoon ground cumin</li>
+        <li>1 teaspoon cayenne pepper</li>
+        <li></li>
+    </ul>
+
+    <h3>For the Sandwich</h3>
+    <ul>
+        <li>2 racks baby back pork ribs</li>
+        <li>1 cup barbecue sauce, divided</li>
+        <li>4 sesame hamburger rolls, split and toasted</li>
+        <li>1 cup coleslaw</li>
+    </ul>
+
+    <h3>Direction</h3>
+
+    <h4>Step 1</h4>
+    <p>Preheat the oven to 325 degrees F (165 degrees C).</p>
+
+    <h4>Step 2</h4>
+    <p>Mix salt, brown sugar, chili powder, pepper, cumin, and cayenne together for the rub.</p>
+
+    <h4>Step 3</h4>
+    <p>Place ribs on a foil-lined baking sheet. Season both sides generously with some of the rub. Reserve remaining rub
+        for another use. Cover top with parchment paper and wrap foil over the edges. Cover the whole baking sheet with
+        another large sheet of foil, sealing in the sides.</p>
+
+    <h4>Step 4</h4>
+    <p>Bake in the preheated oven until tender, about 2 hours and 45 minutes.</p>
+
+    <h4>Step 5</h4>
+    <p>Unwrap ribs and let cool briefly until safe to handle. Pull out the bones, stuffing any loose pieces of meat back
+        into the holes and checking carefully for bone fragments. Wrap ribs back up and refrigerate until cold, 8 hours
+        to overnight.</p>
+
+    <h4>Step 6</h4>
+    <p>Cut each rack in half. Brush both sides generously with barbecue sauce.</p>
+
+    <h4>Step 7</h4>
+    <p>Preheat a charcoal grill for high heat and lightly oil the grate.</p>
+
+    <h4>Step 8</h4>
+    <p>Grill ribs until heated through, 3 to 4 minutes per side. Remove from grill and brush with more barbecue sauce.
+    </p>
+
+    <h4>Step 9</h4>
+    <p>Drizzle more barbecue sauce onto each roll. Sandwich each rib section between a roll and top with coleslaw.</p>
+
+    <a href="../index.html">Return home</a>
+    <a href="#title">Return to top</a>
 </body>
 
 </html>
