--- a/recipes/smash-burger.html
+++ b/recipes/smash-burger.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Homemade smash burger</h1>
+    <h1 id="#title">Homemade smash burger</h1>
 
     <img src="../images/smash-burger.jpeg" alt="">
     <p>This smash burger recipe makes super juicy burgers with crispy edges. Don't use meat that is leaner than 80/20
@@ -59,6 +59,9 @@
         crispy surface area.</p>
 
     <p>I buy American cheese freshly-sliced from the deli, but individually-wrapped slices will work too.</p>
+
+    <a href="../index.html">Return home</a>
+    <a href="#title">Return to top</a>
 </body>
 
 </html>
