--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
     <h1>Odin Recipes</h1>
+
+    <img src="images/mcrib.jpeg" alt="">
     <ul>
         <li><a href="recipes/chipotle-chicken.html">chipotle chicken</a></li>
         <li><a href="recipes/mcrib-sandwich.html">mcrib sandwich</a></li>
