--- a/recipes/chipotle-chicken.html
+++ b/recipes/chipotle-chicken.html
@@ -4,11 +4,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chipotle Chicken</title>
+    <title>Mcrib Sandwich</title>
 </head>
 
 <body>
+    <h1 id="#title">Copycat Chipotle Chicken</h1>
+    <img src="../images/chipotle-chicken.jpeg" alt="">
 
+    <p>This chipotle chicken recipe requires just a small amount of effort for a delicious and healthy meal. You can use
+        this chicken for tacos, burritos, bowls, or fajitas. Just add your favorite toppings such as lettuce, salsa,
+        rice, beans, cheese, or sour cream. Enjoy!</p>
+
+    <h2>Ingredients</h2>
+
+    <ul>
+        <li>1 ounce dried chipotle chile pepper</li>
+        <li>1 ounce dried ancho chile pepper</li>
+        <li>½ cup water</li>
+        <li>½ red onion, cut into small chunks</li>
+        <li>4 cloves garlic</li>
+        <li>2 teaspoons sea salt</li>
+        <li>1 teaspoon ground cumin</li>
+        <li>1 teaspoon dried oregano</li>
+        <li>1 teaspoon freshly ground black pepper</li>
+        <li>2 tablespoons olive oil</li>
+        <li>2 ½ pounds skinless, boneless chicken thighs</li>
+    </ul>
+
+    <h3>Direction</h3>
+
+    <h4>Step 1</h4>
+    <p>Place chipotle and ancho chile peppers in a shallow bowl; pour in water. Cover the bowl and let sit at room
+        temperature until peppers are softened, 10 to 12 hours. Drain water and remove seeds from peppers.</p>
+
+    <h4>Step 2</h4>
+    <p>Blend chile peppers, red onion, garlic, sea salt, cumin, oregano, and black pepper in a blender until a coarse
+        paste forms; add olive oil and blend until marinade is smooth.</p>
+
+    <h4>Step 3</h4>
+    <p>Place chicken thighs between 2 sheets of heavy plastic on a solid, level surface. Firmly pound chicken with the
+        smooth side of a meat mallet to a 1/2-inch thickness.</p>
+
+    <h4>Step 4</h4>
+    <p>Place chicken in a resealable plastic bag and add marinade. Turn chicken several times to coat. Seal bag and
+        marinate in the refrigerator for at least 8 hours.</p>
+
+    <h4>Step 5</h4>
+    <p>Preheat an indoor grill with top and bottom plates for medium-high heat.</p>
+
+    <h4>Step 6</h4>
+    <p>Remove chicken from the bag and discard marinade.</p>
+
+    <h4>Step 7</h4>
+    <p>Place chicken on the preheated grill, close the lid, and cook until no longer pink in the center and the juices
+        run clear, 5 to 7 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees
+        F (74 degrees C). Cut chicken into strips and serve warm.</p>
+
+    <h3>Tips</h3>
+    <p>If you do not have an indoor electric grill, wrap a paver brick in aluminum foil and place it on top of the
+        chicken to keep it flat while cooking on an outdoor grill. Soak chile peppers in chicken broth instead of water,
+        if desired.</p>
+    <a href="../index.html">Return home</a>
+    <a href="#title">Return to top</a>
 </body>
 
 </html>
